# api_hcc_plan

./: pyproject.toml  run.py  webapp-structure.txt
app/: database.py  hcc_plan_db.sqlite  main.py
app/api/: availability.py  dashboard.py  users.py
app/auth/: oauth2.py  routes.py
app/models/: entities.py  schemas.py
app/services/: availability_service.py
app/static/css/: styles.css
app/templates/: availability.html  base.html  dashboard.html  index.html  login.html
app/templates/partials/: availability_summary.html  calendar.html  error.html  footer.html  header.html  login_error.html  login_success.html  redirect.html
scripts/: init_db.py
